hphp/test/slow/php7_backported/scalar-types/scalar_float_with_invalid_default.php.expectf

Fatal error: An expression is expected here. in %s/scalar_float_with_invalid_default.php on line 9
